--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@ h3 {
   font-family: 'Montserrat', sans-serif;
 }
 
+h4 {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+}
+
 a{
   color: #11999E;
     font-family: 'Montserrat', sans-serif;
@@ -57,9 +62,9 @@ p {
 }
 
 .skill-row {
-  width: 65%;
-  margin: 100px auto 100px auto;
-  text-align: left;
+  width: 50%;
+  margin: 50px auto 20px auto;
+  text-align: center;
 }
 
 .top-cloud {
@@ -75,19 +80,16 @@ p {
 }
 
 .computer-image {
-  width: 25%;
-  float: left;
-  margin-right: 30px;
+  width: 10%;
 }
 
 .chillies-image {
-  width: 25%;
-  float: right;
-  margin-left: 30px;
+  width: 10%;
+
 }
 
 .intro {
-  width: 65%;
+  width: 50%;
   margin: auto;
   margin-bottom: 10px;
 }
@@ -104,11 +106,11 @@ hr {
 }
 
 .lasthr{
-  margin:50px auto 50px;
+  margin:20px auto 20px;
 }
 
 .contact-message {
-  width: 40%;
+  width: 50%;
   margin: 10px auto 60px;
 }
 
