--- a/css/styles.css
+++ b/css/styles.css
@@ -50,11 +50,13 @@ color: #EAF6F6;
 
 .middle-container {
   margin: 100px 0;
+  margin-bottom: 30px;
 }
 
 .bottom-container {
   background-color: #66BFBF;
-  padding: 20px 0 25px
+  padding: 20px 0 25px;
+  margin-top: 30px;
 }
 
 p {
@@ -62,7 +64,7 @@ p {
 }
 
 .skill-row {
-  width: 50%;
+  width: 65%;
   margin: 50px auto 20px auto;
   text-align: center;
 }
@@ -89,7 +91,7 @@ p {
 }
 
 .intro {
-  width: 50%;
+  width: 65%;
   margin: auto;
   margin-bottom: 10px;
 }
@@ -110,7 +112,7 @@ hr {
 }
 
 .contact-message {
-  width: 50%;
+  width: 65%;
   margin: 10px auto 60px;
 }
 
